--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,7 @@
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.4",
     "typescr"^5.5.0",
-    ""@types/react": "18.3.1",
-    ""@types/node": "20.12".0"
+    "@types/react": "18.3.1",
+    "@types/node":"20.12.7"
   }
 }
