--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,7 @@
     "eslint-config-next": "14.2.3",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.4",
-    "typescript "5.5.0",
+    "typescript": "5.5.0",
     "@types/react": "18.3.1",
     "@types/node": "20.12.7"
   }
