--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "next": "14.2.3",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1
   },
   "devDependencies": {
     "autoprefixer": "^10.4.17",
@@ -21,6 +21,6 @@
     "tailwindcss": "^3.4.4",
     "typescript": "5.5.0",
     "@types/react": "18.3.1",
-    "@types/node": "20.12.7"
+    "@types/node": "20.1.7"
   }
 }
