--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "next": "14.2.3",
     "react": "18.3.1",
-    "react-dom": "18.318.3.1"
+    "react-dom": "18.3.1""
   },
   "devDependencies": {
     "autoprefixer": "^10.4.17",
