--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,14 @@
   "dependencies": {
     "next": "14.2.3",
     "react": "18.3.1",
-    "react-d"18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.17",
-    "eslint": 8"8.57.0"0
+    "autoprefixer": "10.4.17",
+    "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
-    "postcss": "^8.4.32",
-    "tailwindcss": "^3.4.4",
+    "postcss": "8.4.32",
+    "tailwindcss": "3.4.4",
     "typescript": "5.5.0",
     "@types/react": "18.3.1",
     "@types/node": "20.1.7"
